  
 Bugs fixed:
  - dramatic speed improvements to spell list importing via the networkDynamic() function
  - fixed bug in network.edgecount.active and network.naedgecount.active when network has deleted edges (such as ergm sim output). 

v0.4.1 - bug fixes
  - fixed problem in delete spell function that would give errors on some deactivate.vertices calls
  - fixed bug in get.vertex.activity(as.spellList=TRUE) when spell activity had been deleted or removed
  - fixed bug in get.change.times that prevented it from checking changes times of TEAs
v0.4 - new functionality and bug fixes
  - networkDynamic() function supports conversion from various tabular schemas (spell-edgelists, toggles, lists of networks)
  - added ability to attach Temporally Extended Attributes (TEAs) to network elements to store and manipulate changing attributes of vertices, edges and networks.
  - specification of an (optional) net.obs.period attribute to store meta-information about the network's period of observation/simulation
  - added network.collapse() function (and %k% operator) which complements network.extract() for extracting an appropriate static network from a dynamicNetwork object
  - added support for networks with zero vertices (feature added in network)
  - addition of as.network.networkDynamic and as.networkDynamic.network to remove and set networkDynamic class on network objects. 
  - added package dependency on statnet.commons for startup message functionality
  - added package suggests to testthat to support more efficient writing of unit tests. 
  - extensive and updated package vignette / tutorial: browseVignettes(package='networkDynamic')
  - numerous bug fixes and documentation improvements

v0.3 - bug fixes and new functionality
	- network.dynamic.check now optionally reports what is wrong with an element
	- new functions get.vertex.activity and get.edge.activity to return activity matrices of elements