@@ -8,10 +8,7 @@ is.networkDynamic,
 as.networkDynamic,
 as.network.networkDynamic,
 as.networkDynamic.networkDynamic,
-#as.networkDynamic.data.frame,
 as.networkDynamic.network,
-#as.networkDynamic.network.list,
-#as.networkDynamic.list,
 #read.son,
 "%t%",
 network.extract,
@@ -19,7 +16,6 @@ network.extract,
 network.collapse,
 get.networks,
 network.dynamic.check,
-# duration.matrix,
 activate.edges,
 activate.vertices,
 add.edges.active,
